troubleshooting layout issues

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -335,7 +335,8 @@ background-color: #FFF5E1;
     padding: 0.1;
 }
 .DownArrow{
-    width: 50px;
+    width: 15px;
+    height: 15px;
 }
 .UpArrow{
     width: 10px;
@@ -352,18 +353,13 @@ background-color: #FFF5E1;
 }
 
 .confetti{
-    width: 15px;
-    height: 15px;
-    margin-top: 12px;
+    width: 20px;
+    height: 25px;
+    margin-top: 15px;
     margin-left: 10px;
 }
 
-.happyEmoji{
-    width: 12px;
-    height: 12px;
-    margin-top: 25px;
-   
-   }
+
 
    
 /*ICON CONTAINERS*/ 
@@ -414,27 +410,39 @@ background-color: #FFF5E1;
       
 }
 
+/*MESSAGE BLOCK*/
+
 .TaglineContainer{
     display: flex;
+}
+
+.Card--Message .Intro{
+    font-size: 1.5rem;
 }
 
 .Card--Message{
  /*width: 100vw; */
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
+    flex-direction: column;    
 
 }
 .card .message{
-    font-size: 0.6rem;
+    font-size: 1rem;
+    font-weight: 600;
    
 }
+.happyEmoji{
+    width: 15px;
+    height: 15px;
+    margin-top: 27px;
+   
+   }
 @media screen and (min-width:768px){
     
     .Card--Message{
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
 
     }
     .message{
@@ -491,6 +499,11 @@ background-color: #FFF5E1;
 .barChart{
     width: 300px;
 }
+.BarChartContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .GrowthGauge{
     width: 250px;
 }
@@ -505,15 +518,15 @@ background-color: #FFF5E1;
     background-color:#EEEDFE;
 }
 .GrowthContainer{
-    width: 50vw;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 @media screen and (min-width){
     .GrowthContainer{
-        justify-content: flex-start;
     }
 }
 .GrowthYear{
@@ -561,20 +574,30 @@ background-color: #FFF5E1;
 }
 
 .WaveContainer{
-    width: 50vw;
+   /*
     display: flex;
     justify-content: center;
-   
+   */
+}
+
+.block__tag{
+    font-size: 0.7rem;
+}
+
+.ProfileReport{
+    display: flex;
+    justify-content: space-between;
 }
 @media screen and (min-width:768px){
-    .WaveContainer{
+  /*  .WaveContainer{
         justify-content: center;
         align-items: center;
+    }*/
+    .block__tag{
+        font-size: 1rem;
     }
 }
-.ProfileReport{
-    width: 50vw;
-}
+
 .ProfileReport .percentage{
     margin-bottom: 0;
     font-weight: 600;
@@ -611,10 +634,13 @@ background-color: #FFF5E1;
     position: relative;
 }
 
+.ChartDetails {
+   position: relative;
+}
 .OrderPercentage{
     position: absolute;
     bottom: 20px;
-    left: 317px;
+    left: 25px;
     
 
 }
@@ -629,9 +655,6 @@ background-color: #FFF5E1;
     opacity: 0.6;
 }
 
-.ChartDetails {
-    margin-left: 40px;
-}
 .OrderContainer h3{
     font-weight: 600;
     opacity: 0.6;
@@ -775,8 +798,14 @@ background-color: #FFF5E1;
    
 }
 .NavigationIcon{
-    width: 30PX;
-    height:30px
+    width: 20PX;
+    height:20px
+}
+@media screen and (min-width:768px){
+    .NavigationIcon{
+        width: 30PX;
+        height:30px
+}
 }
 .ProfilePicture{
     width: 30px;
@@ -792,10 +821,23 @@ background-color: #FFF5E1;
     position: absolute;
     right: 3px;
     bottom: 3px;
-}@media screen and (min-width:768px){
+}
+@media screen and (max-width:767px){
+    .NavigationBar .github{
+        display: none;
+    }
+    .NavigationBar .bell{
+        display: none;
+    }
+    .NavigationBar .brightness{
+        display: none;
+    }
+}
+@media screen and (min-width:768px){
     .ActivityStatus{
         top: 23px;
     }
+    
 }
 @media screen and (min-width:1024px){
     .NavigationBar .menu{
@@ -816,6 +858,7 @@ background-color: #FFF5E1;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-shrink: 1;
     
 }
 
@@ -840,7 +883,6 @@ background-color: #FFF5E1;
 /*INPUTS*/
 .NavInput{
     padding: 0.5rem 1.5rem;
-    border: 1px solid black;
     border-radius: 30px;
     outline: 0;
     color: var(--colorBody);
@@ -879,6 +921,8 @@ background-color: #FFF5E1;
 .InputGroup .NavInput{
     flex: 1;
     border: 0;
+    padding: 1rem;
+
 }
 .InputGroup .SearchIcon{
     margin-left: 40px;
@@ -964,6 +1008,56 @@ background-color: #FFF5E1;
 
     .transactionhistory{
         grid-row: 4;
+    }
+
+}
+
+@media screen and (min-width:992px){
+    .main{
+        grid-template-rows: repeat(30, 25fr);
+        grid-template-columns: 50fr 25fr 25fr 25fr;
+        justify-items: stretch;
+        align-items: ;
+
+    }
+
+    .NavigationBar{
+        grid-column: 1/7;
+    }
+    
+    .MessageBlock{
+        grid-column: 1/3;
+    }
+    
+    .totalrevenueblock{
+        grid-column: 1/4;
+        grid-row: 3;
+    }
+    
+    .transactionblock{
+        grid-column: 1/2;
+        grid-row: ;
+    }
+    
+    .statsblock{
+        grid-column: 2/4;
+        grid-row: ;
+    }
+    
+    .profilereportblock{
+        grid-column: 1/4;
+        grid-row: ;
+        
+    }
+    .incomeblock{
+        grid-column: 1/4;
+    }
+    .paymentblock{
+        grid-row: ;
+    }
+
+    .transactionhistory{
+        grid-row: ;
     }
 
 }
